--- a/notebooks/external-validation/ext_data_brainvision_to_edf.ipynb
+++ b/notebooks/external-validation/ext_data_brainvision_to_edf.ipynb
@@ -1,20 +1,12 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyNIxs0QvooF7Dkq7l4S96n5"
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "##### This notebook implements Brainvision to EDF format conversion, needed for external validation of the EpiGAME on the \"Fragility Multi-Center Retrospective Study\" dataset (doi:10.18112/openneuro.ds003029.v1.0.5)."
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": null,
@@ -34,7 +26,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Load the data using the MNE library. Mind that the VMRK and IEEG files should be in the same directory as the VHDR file."
+      ]
+    },
+    {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "3eX9ogMkkrHM"
+      },
+      "outputs": [],
       "source": [
         "# !pip install mne\n",
         "\n",
@@ -47,15 +51,29 @@
         "# raw_brainvision.plot()\n",
         "\n",
         "raw_brainvision.close()"
-      ],
-      "metadata": {
-        "id": "3eX9ogMkkrHM"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "The external data seems to use a different date format. We can try to adapt it using the datetime tools."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "We must check for other inconsistencies as well."
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "eZkk4uwwu-7R"
+      },
+      "outputs": [],
       "source": [
         "from datetime import datetime\n",
         "\n",
@@ -68,15 +86,22 @@
         "print(original_date_time, \"converted to\", iso8601_date_time)\n",
         "\n",
         "raw_brainvision.set_meas_date(iso8601_date_time)"
-      ],
-      "metadata": {
-        "id": "eZkk4uwwu-7R"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Finally, we can export the external data as EDF, using \"MNE.export.export_raw\". "
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "TygJJtLKn-3R"
+      },
+      "outputs": [],
       "source": [
         "# !pip install EDFlib-Python\n",
         "\n",
@@ -85,33 +110,70 @@
         "\n",
         "# Export the raw data to EDF format\n",
         "mne.export.export_raw(main_folder + subfolder + edf_filename, raw_brainvision, fmt='edf', overwrite=True)\n"
-      ],
-      "metadata": {
-        "id": "TygJJtLKn-3R"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "The code below loads the created EDF file."
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "aURPf5SZxLbA"
+      },
+      "outputs": [],
       "source": [
         "# Load EDF data using MNE-Python\n",
-        "raw_edf = mne.io.read_raw_edf(main_folder + subfolder + edf_export_filename, preload=True)\n",
+        "raw_edf = mne.io.read_raw_edf(main_folder + subfolder + edf_filename, preload=True)\n",
         "\n",
         "# Print some information about the loaded data\n",
         "print(raw_edf.info)\n",
         "\n",
         "# Close the EDF file\n",
         "raw_edf.close()"
-      ],
-      "metadata": {
-        "id": "aURPf5SZxLbA"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Load all of the dependecies needed for managing the EDF file for EpiGAME."
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 41,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9IoNkz6gx5SE",
+        "outputId": "ce7b4392-d994-4ac3-e1cc-4c2b3a4d8386"
+      },
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "<>:327: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+            "<>:327: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+            "<ipython-input-41-710d0a978d55>:327: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+            "  def is_scalar(this): return this.shape is ()\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: pyEDFlib in /usr/local/lib/python3.10/dist-packages (0.1.34)\n",
+            "Requirement already satisfied: numpy>=1.9.1 in /usr/local/lib/python3.10/dist-packages (from pyEDFlib) (1.23.5)\n"
+          ]
+        }
+      ],
       "source": [
         "from inspect import ismethod\n",
         "from datetime import timedelta as _time\n",
@@ -1033,38 +1095,22 @@
         "    else: rse = upsample(epoch, eeg.fs, limit) if eeg.fs<limit else dwindle(epoch, int(eeg.fs/limit)-2)\n",
         "    nse = notch(rse, fs=sampling, order=2)\n",
         "    return nse"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "9IoNkz6gx5SE",
-        "outputId": "ce7b4392-d994-4ac3-e1cc-4c2b3a4d8386"
-      },
-      "execution_count": 41,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<>:327: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
-            "<>:327: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
-            "<ipython-input-41-710d0a978d55>:327: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
-            "  def is_scalar(this): return this.shape is ()\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Requirement already satisfied: pyEDFlib in /usr/local/lib/python3.10/dist-packages (0.1.34)\n",
-            "Requirement already satisfied: numpy>=1.9.1 in /usr/local/lib/python3.10/dist-packages (from pyEDFlib) (1.23.5)\n"
-          ]
-        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "We can now load the EDF file using the EEG module, with defined epoch span and step."
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "HCLzYruaySAa"
+      },
+      "outputs": [],
       "source": [
         "span, step = 1000, 500      # in ms\n",
         "min_woi_duration = 60000    # in ms\n",
@@ -1073,45 +1119,63 @@
         "print(\"Number of epochs to consider for classification =\", n_epochs)\n",
         "\n",
         "eeg_seizure = EEG.from_file(main_folder + subfolder + edf_filename, epoch(ms(step), ms(span)))    # load raw seizure IEEG data as an EEG object (class)\n"
-      ],
-      "metadata": {
-        "id": "HCLzYruaySAa"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "eeg_seizure"
-      ],
-      "metadata": {
-        "id": "QCigDBlKz4Zb"
-      },
       "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "eeg_seizure.notes"
-      ],
       "metadata": {
         "id": "QP-9HAgvz6d7"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "my_data = \"JQN2013JAN25-PAc-seizure.EDF\"\n",
+        "\n",
+        "path_to_data = main_folder + my_data\n",
+        "\n",
+        "eeg_my_data = EEG.from_file(path_to_data, epoch(ms(step), ms(span)))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Events and Descriptions\n",
+        "* eeg onset, or clinical onset - the onset of a seizure that is either marked electrographically, or by clinical behavior. Note that the clinical onset may not always be present, since some seizures manifest without clinical behavioral changes.\n",
+        "* Marker/Mark On - these are usually annotations within some cases, where a health practitioner injects a chemical marker for use in ICTAL SPECT imaging after a seizure occurs. This is commonly done to see which portions of the brain are active metabolically.\n",
+        "* Marker/Mark Off - This is when the ICTAL SPECT stops imaging.\n",
+        "* eeg offset, or clinical offset - this is the offset of the seizure, as determined either electrographically, or by clinical symptoms."
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(eeg_seizure.labels)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "emGz2dYH0EBS"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "print(eeg_seizure.notes)\n",
+        "for note in eeg_my_data.notes: print(f\"{note}:{eeg_my_data.notes[note]}\")\n",
+        "\n",
+        "print(eeg_seizure.labels)\n",
+        "print(eeg_my_data.labels)"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyNIxs0QvooF7Dkq7l4S96n5",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
