--- a/notebooks/external-validation/ext_data_brainvision_to_edf.ipynb
+++ b/notebooks/external-validation/ext_data_brainvision_to_edf.ipynb
@@ -129,12 +129,64 @@
       "source": [
         "# Load EDF data using MNE-Python\n",
         "raw_edf = mne.io.read_raw_edf(main_folder + subfolder + edf_filename, preload=True)\n",
+        "# Close the EDF file\n",
+        "raw_edf.close()\n",
         "\n",
         "# Print some information about the loaded data\n",
         "print(raw_edf.info)\n",
+        "print(raw_edf.info[\"subject_info\"])\n",
         "\n",
-        "# Close the EDF file\n",
-        "raw_edf.close()"
+        "events = mne.events_from_annotations(raw_edf)\n",
+        "print(events)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "n_time_samps = raw_edf.n_times\n",
+        "time_secs = raw_edf.times\n",
+        "\n",
+        "print(n_time_samps)\n",
+        "print(time_secs)\n",
+        "\n",
+        "print(raw_edf.time_as_index(20))\n",
+        "print(raw_edf.time_as_index([20, 30, 40]), \"\\n\")\n",
+        "\n",
+        "print(np.diff(raw_edf.time_as_index([1, 2, 3])))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "sampling_freq = raw_edf.info[\"sfreq\"]\n",
+        "start_stop_seconds = np.array([11, 13])\n",
+        "start_sample, stop_sample = (start_stop_seconds * sampling_freq).astype(int)\n",
+        "channel_index = 1\n",
+        "raw_edf_selection = raw_edf[channel_index, start_sample:stop_sample]\n",
+        "print(raw_edf_selection)\n",
+        "\n",
+        "x = raw_edf_selection[1]\n",
+        "y = raw_edf_selection[0].T\n",
+        "plt.plot(x, y)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "data = raw_edf.get_data()\n",
+        "print(data.shape) "
       ]
     },
     {
