--- a/notebooks/external-validation/metadata_to_excel.ipynb
+++ b/notebooks/external-validation/metadata_to_excel.ipynb
@@ -955,11 +955,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from google.colab import drive\n",
+    "drive.mount('/content/gdrive')\n",
+    "\n",
+    "main_folder = \"/content/gdrive/My Drive/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import pandas as pd\n",
     "\n",
     "# Sample data\n",
     "data = {\n",
     "    'SUB_ID': [],\n",
+    "    'RUN_ID': [],\n",
     "    'RECORDING_LEN': [],\n",
     "    'SEIZURE_LEN': [],\n",
     "    'PRESEIZURE_LEN': [],\n",
@@ -998,22 +1011,27 @@
     "    - epoch_params (dict): Dictionary containing epoch parameters (ms step, ms span).\n",
     "    \"\"\"\n",
     "    for file_name in os.listdir(edf_dir):\n",
+    "\n",
     "        if file_name.endswith(\".edf\"):\n",
+    "\n",
+    "            print(f\"Processing {file_name}\")\n",
     "            edf_file = os.path.join(edf_dir, file_name)\n",
     "\n",
     "            # Load raw seizure SEEG data as an EEG object\n",
     "            eeg_seizure = EEG.from_file(edf_file, epoch(ms(step), ms(span)))    # load raw seizure SEEG data as an EEG object (class)\n",
     "\n",
     "            sub_id = file_name.split('_')[0]\n",
+    "            run_id = file_name.split('_')[1]\n",
     "            event_ch = 1 if \"EVENT\" in list(eeg_seizure.axes.region) else 0\n",
     "            recording_len = eeg_seizure.duration\n",
     "            notes = list(eeg_seizure.notes)\n",
     "            sz_start_note, sz_end_note = 'Stimulus/S  2', 'Stimulus/S  1'\n",
     "            seizure_len = eeg_seizure.notes[sz_end_note][0].time - eeg_seizure.notes[sz_start_note][0].time\n",
-    "            preseizure_len = eeg_seizure.duration - seizure_len\n",
+    "            preseizure_len = eeg_seizure.duration.time - seizure_len\n",
     "            fs = eeg_seizure.fs\n",
     "\n",
     "            data['SUB_ID'].append(sub_id)\n",
+    "            data['RUN_ID'].append(run_id)\n",
     "            data['RECORDING_LEN'].append(recording_len)\n",
     "            data['SEIZURE_LEN'].append(seizure_len)\n",
     "            data['PRESEIZURE_LEN'].append(preseizure_len)\n",
@@ -1021,7 +1039,7 @@
     "            data['NOTES'].append(notes)\n",
     "            data['EVENT_CH'].append(event_ch)\n",
     "\n",
-    "edf_directory = '/home/kivi/Documents/Ext-val-edf/'\n",
+    "edf_directory = main_folder + 'Ext-val-edf/'\n",
     "\n",
     "# Call the parsing function\n",
     "parse_ext_val_edf_directory(edf_directory)"
