--- a/notebooks/external-validation/brainvision_to_edf.ipynb
+++ b/notebooks/external-validation/brainvision_to_edf.ipynb
@@ -26,6 +26,7 @@
    "outputs": [],
    "source": [
     "# !pip install mne\n",
+    "# !!pip install EDFlib-Python\n",
     "\n",
     "import mne"
    ]
@@ -59,19 +60,87 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import mne\n",
+    "import pandas as pd\n",
     "\n",
-    "def convert_vhdr_to_edf(vhdr_file, output_dir):\n",
+    "def find_bad_channels(ieeg_dir):\n",
     "    \"\"\"\n",
-    "    Converts a BrainVision VHDR file to EDF format using MNE library.\n",
+    "    For each ieeg file, find bad channels by checking the corresponding channels.tsv file.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - ieeg_dir (str): Path to the directory containing ieeg files.\n",
+    "\n",
+    "    Returns:\n",
+    "    - bad_channels_dict (dict): Dictionary with ieeg filenames as keys and lists of bad channels as values.\n",
+    "    \"\"\"\n",
+    "    bad_channels_dict = {}\n",
+    "\n",
+    "    for ieeg_file_name in os.listdir(ieeg_dir):\n",
+    "        if ieeg_file_name.endswith(\".ieeg\"):\n",
+    "            ieeg_file_path = os.path.join(ieeg_dir, ieeg_file_name)\n",
+    "\n",
+    "            # Extract sub_id and run_id from the ieeg filename\n",
+    "            sub_id = ieeg_file_name.split('_')[0]\n",
+    "            run_id = ieeg_file_name.split('_')[-2]\n",
+    "\n",
+    "            # Search for all channels.tsv files in the channels_tsv_dir\n",
+    "            for channels_tsv_name in os.listdir(ieeg_dir):\n",
+    "                if channels_tsv_name.endswith(\"_channels.tsv\") and sub_id in channels_tsv_name and f\"run-{run_id}\" in channels_tsv_name:\n",
+    "                    channels_tsv_path = os.path.join(ieeg_dir, channels_tsv_name)\n",
+    "\n",
+    "                    # Load channel information from channels.tsv\n",
+    "                    channels_df = pd.read_csv(channels_tsv_path, delimiter='\\t')\n",
+    "\n",
+    "                    # Extract bad channels\n",
+    "                    bad_channels = channels_df[channels_df['status'] == 'bad']['name'].tolist()\n",
+    "\n",
+    "                    # Store bad channels in the dictionary\n",
+    "                    bad_channels_dict[f\"{sub_id}_{run_id}\"] = bad_channels\n",
+    "                    break  # Break the loop once matching channels_tsv is found\n",
+    "                \n",
+    "    return bad_channels_dict\n",
+    "\n",
+    "def exclude_bad_channels(raw, bad_channels):\n",
+    "    \"\"\"\n",
+    "    Exclude bad channels from the raw data.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - raw (mne.io.Raw): MNE Raw object.\n",
+    "    - bad_channels (list): List of bad channel labels.\n",
+    "\n",
+    "    Returns:\n",
+    "    - raw (mne.io.Raw): MNE Raw object with bad channels excluded.\n",
+    "    \"\"\"\n",
+    "    # Exclude bad channels\n",
+    "    raw_copy = raw.copy().drop_channels(bad_channels)\n",
+    "    return raw_copy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert_vhdr_to_edf(vhdr_file, output_dir, bad_channels_dict):\n",
+    "    \"\"\"\n",
+    "    Converts a BrainVision VHDR file to EDF format using MNE library,\n",
+    "    excluding bad channels found by find_bad_channels function.\n",
     "\n",
     "    Parameters:\n",
     "    - vhdr_file (str): Path to the input VHDR file.\n",
     "    - output_dir (str): Directory to save the output EDF file.\n",
+    "    - bad_channels_dict (dict): Dictionary with ieeg filenames as keys and lists of bad channels as values.\n",
     "    \"\"\"\n",
     "    # Load data using MNE\n",
     "    raw = mne.io.read_raw_brainvision(vhdr_file, preload=True)\n",
+    "    raw.close()\n",
+    "    # Extract bad channels for the current file\n",
+    "    bad_channels = bad_channels_dict.get(os.path.basename(vhdr_file), [])\n",
     "\n",
+    "    # Exclude bad channels\n",
+    "    raw = exclude_bad_channels(raw, bad_channels)\n",
+    "\n",
+    "    raw = format_datetime(raw)\n",
     "    # Extract subject ID and run number from the filename\n",
     "    file_name = os.path.basename(vhdr_file)\n",
     "    subject_id = file_name.split('_')[0]\n",
@@ -109,14 +178,20 @@
     "                        convert_vhdr_to_edf(vhdr_file, output_dir)\n",
     "\n",
     "# Replace 'your_input_directory' and 'your_output_directory' with the actual paths\n",
-    "input_directory = '/home/kivi/Documents/Ext-val/'\n",
-    "output_directory = '/home/kivi/Documents/Ext-val-edf/'\n",
+    "input_directory = main_folder + 'Ext-val/'\n",
+    "output_directory = main_folder + 'Ext-val-edf/'\n",
     "\n",
     "# Create output directory if it doesn't exist\n",
     "os.makedirs(output_directory, exist_ok=True)\n",
     "\n",
-    "# Call the parser function\n",
-    "parse_and_convert_data(input_directory, output_directory)\n"
+    "# Find bad channels\n",
+    "bad_channels_result = find_bad_channels(input_directory)\n",
+    "\n",
+    "# Iterate through ieeg files and convert to EDF\n",
+    "for ieeg_file_name in os.listdir(input_directory):\n",
+    "    if ieeg_file_name.endswith(\".vhdr\"):\n",
+    "        ieeg_file_path = os.path.join(input_directory, ieeg_file_name)\n",
+    "        convert_vhdr_to_edf(ieeg_file_path, output_directory, bad_channels_result)\n"
    ]
   }
  ],
