--- a/notebooks/external-validation/brainvision_to_edf.ipynb
+++ b/notebooks/external-validation/brainvision_to_edf.ipynb
@@ -13,10 +13,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from google.colab import drive\n",
-    "# drive.mount('/content/gdrive')\n",
+    "from google.colab import drive\n",
+    "drive.mount('/content/gdrive')\n",
     "\n",
-    "# main_folder = \"/content/gdrive/My Drive/epigame-folder/\"\n"
+    "main_folder = \"/content/gdrive/My Drive/Ext-val/\""
    ]
   },
   {
@@ -25,8 +25,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip install mne\n",
-    "# !!pip install EDFlib-Python\n",
+    "!pip install mne\n",
+    "!!pip install EDFlib-Python\n",
     "\n",
     "import mne"
    ]
@@ -75,16 +75,17 @@
     "    bad_channels_dict = {}\n",
     "\n",
     "    for ieeg_file_name in os.listdir(ieeg_dir):\n",
-    "        if ieeg_file_name.endswith(\".ieeg\"):\n",
-    "            ieeg_file_path = os.path.join(ieeg_dir, ieeg_file_name)\n",
-    "\n",
+    "        if ieeg_file_name.endswith(\".eeg\"):\n",
+    "          \n",
     "            # Extract sub_id and run_id from the ieeg filename\n",
     "            sub_id = ieeg_file_name.split('_')[0]\n",
     "            run_id = ieeg_file_name.split('_')[-2]\n",
+    "            print(sub_id, run_id)\n",
     "\n",
     "            # Search for all channels.tsv files in the channels_tsv_dir\n",
     "            for channels_tsv_name in os.listdir(ieeg_dir):\n",
-    "                if channels_tsv_name.endswith(\"_channels.tsv\") and sub_id in channels_tsv_name and f\"run-{run_id}\" in channels_tsv_name:\n",
+    "                if channels_tsv_name.endswith(\"_channels.tsv\") and sub_id in channels_tsv_name and run_id in channels_tsv_name:\n",
+    "                    \n",
     "                    channels_tsv_path = os.path.join(ieeg_dir, channels_tsv_name)\n",
     "\n",
     "                    # Load channel information from channels.tsv\n",
@@ -111,8 +112,8 @@
     "    - raw (mne.io.Raw): MNE Raw object with bad channels excluded.\n",
     "    \"\"\"\n",
     "    # Exclude bad channels\n",
-    "    raw_copy = raw.copy().drop_channels(bad_channels)\n",
-    "    return raw_copy"
+    "    raw = raw.drop_channels(bad_channels)\n",
+    "    return raw"
    ]
   },
   {
@@ -132,19 +133,22 @@
     "    - bad_channels_dict (dict): Dictionary with ieeg filenames as keys and lists of bad channels as values.\n",
     "    \"\"\"\n",
     "    # Load data using MNE\n",
-    "    raw = mne.io.read_raw_brainvision(vhdr_file, preload=True)\n",
-    "    raw.close()\n",
+    "    raw_original = mne.io.read_raw_brainvision(vhdr_file, preload=True)\n",
+    "    raw_original.close()\n",
+    "    raw = raw_original.copy()\n",
+    "\n",
+    "    # Extract subject ID and run number from the filename\n",
+    "    file_name = os.path.basename(vhdr_file)\n",
+    "    subject_id = file_name.split('_')[0]\n",
+    "    run_number = file_name.split('_')[-2]\n",
+    "\n",
     "    # Extract bad channels for the current file\n",
-    "    bad_channels = bad_channels_dict.get(os.path.basename(vhdr_file), [])\n",
+    "    bad_channels = bad_channels_dict.get(f\"{subject_id}_{run_number}\", [])\n",
     "\n",
     "    # Exclude bad channels\n",
     "    raw = exclude_bad_channels(raw, bad_channels)\n",
     "\n",
     "    raw = format_datetime(raw)\n",
-    "    # Extract subject ID and run number from the filename\n",
-    "    file_name = os.path.basename(vhdr_file)\n",
-    "    subject_id = file_name.split('_')[0]\n",
-    "    run_number = file_name.split('_')[-2]\n",
     "\n",
     "    # Export to EDF\n",
     "    edf_file = os.path.join(output_dir, f\"{subject_id}_{run_number}.edf\")\n",
@@ -163,6 +167,7 @@
     "    - output_dir (str): Directory to save the output EDF files.\n",
     "    \"\"\"\n",
     "    for subject_dir in os.listdir(root_dir):\n",
+    "        print(subject_dir)\n",
     "        subject_path = os.path.join(root_dir, subject_dir)\n",
     "\n",
     "        # Check if it's a \"sub-***\" directory\n",
@@ -178,7 +183,7 @@
     "                        convert_vhdr_to_edf(vhdr_file, output_dir)\n",
     "\n",
     "# Replace 'your_input_directory' and 'your_output_directory' with the actual paths\n",
-    "input_directory = main_folder + 'Ext-val/'\n",
+    "input_directory = main_folder\n",
     "output_directory = main_folder + 'Ext-val-edf/'\n",
     "\n",
     "# Create output directory if it doesn't exist\n",
