--- a/notebooks/external-validation/brainvision_to_edf.ipynb
+++ b/notebooks/external-validation/brainvision_to_edf.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The channels labeled as \"bad\" in the TSV files are excluded before exporting to EDF."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -122,6 +129,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def find_annotations(sub_id, run_id):\n",
+    "    \"\"\"\n",
+    "    Find the seizure onset and offset annotations from the Excel file.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - annotations_path (str): Path to the Excel table.\n",
+    "    - sub_id (str): Subject ID.\n",
+    "    - run_id (str): Run ID.\n",
+    "\n",
+    "    Returns:\n",
+    "    - onset (float): Seizure onset time (s)\n",
+    "    - offset (float): Seizure offset time (s)\n",
+    "    \"\"\"\n",
+    "    onset, offset = None, None\n",
+    "\n",
+    "    # Load the DataFrame from the Excel file\n",
+    "    df = pd.read_excel(\"/content/gdrive/My Drive/Ext-val/onset_annotations.xlsx\")\n",
+    "\n",
+    "    # Discard rows with a value of 1 in the 'UNCLEAR' column\n",
+    "    df = df[df['UNCLEAR'] != 1]\n",
+    "\n",
+    "    # Find the row with the specified SUB_ID and RUN_ID\n",
+    "    selected_row = df[(df['SUB_ID'] == sub_id) & (df['RUN_ID'] == run_id)]\n",
+    "\n",
+    "    # Check if the row is found\n",
+    "    if not selected_row.empty:\n",
+    "        # Extract 'ONSET_TIME' and 'OFFSET_TIME' from the selected row\n",
+    "        onset = selected_row['ONSET_TIME'].values[0]\n",
+    "        offset = selected_row['OFFSET_TIME'].values[0]\n",
+    "\n",
+    "    return onset, offset\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def convert_vhdr_to_edf(vhdr_file, output_dir, bad_channels_dict):\n",
     "    \"\"\"\n",
     "    Converts a BrainVision VHDR file to EDF format using MNE library,\n",
@@ -141,6 +188,15 @@
     "    file_name = os.path.basename(vhdr_file)\n",
     "    subject_id = file_name.split('_')[0]\n",
     "    run_number = file_name.split('_')[-2]\n",
+    "\n",
+    "    # Find seizure onset and offset times in the manually created Excel table\n",
+    "    seizure_onset, seizure_offset = find_annotations(subject_id, run_number)\n",
+    "    # Remove existing annotations\n",
+    "    raw.set_annotations(None)\n",
+    "    assert len(raw.annotations) == 0\n",
+    "    # Create and set annotations\n",
+    "    annotations = mne.Annotations(onset=[seizure_onset,seizure_offset], duration=[0,0], description=['Start', 'End'])\n",
+    "    raw.set_annotations(annotations)\n",
     "\n",
     "    # Extract bad channels for the current file\n",
     "    bad_channels = bad_channels_dict.get(f\"{subject_id}_{run_number}\", [])\n",
