--- a/notebooks/external-validation/brainvision_to_edf.ipynb
+++ b/notebooks/external-validation/brainvision_to_edf.ipynb
@@ -188,7 +188,8 @@
     "    file_name = os.path.basename(vhdr_file)\n",
     "    subject_id = file_name.split('_')[0]\n",
     "    run_number = file_name.split('_')[-2]\n",
-    "\n",
+    "    print(run_number)\n",
+    "    \n",
     "    # Find seizure onset and offset times in the manually created Excel table\n",
     "    seizure_onset, seizure_offset = find_annotations(subject_id, run_number)\n",
     "    # Remove existing annotations\n",
@@ -197,7 +198,6 @@
     "    # Create and set annotations\n",
     "    annotations = mne.Annotations(onset=[seizure_onset,seizure_offset], duration=[0,0], description=['Start', 'End'])\n",
     "    raw.set_annotations(annotations)\n",
-    "\n",
     "    # Extract bad channels for the current file\n",
     "    bad_channels = bad_channels_dict.get(f\"{subject_id}_{run_number}\", [])\n",
     "\n",
@@ -213,7 +213,7 @@
     "    print(f\"Converted {vhdr_file} to {edf_file}\")\n",
     "\n",
     "\n",
-    "def parse_and_convert_data(root_dir, output_dir):\n",
+    "def parse_and_convert_data(root_dir, output_dir, bad_channels_dict):\n",
     "    \"\"\"\n",
     "    Recursively parses the input directory, finds BrainVision VHDR files,\n",
     "    extracts subject ID and run number, and converts them to EDF format.\n",
@@ -236,7 +236,7 @@
     "                    # Check if the file is a BrainVision VHDR file\n",
     "                    if file.endswith(\".vhdr\"):\n",
     "                        vhdr_file = os.path.join(presurgery_path, file)\n",
-    "                        convert_vhdr_to_edf(vhdr_file, output_dir)\n",
+    "                        convert_vhdr_to_edf(vhdr_file, output_dir, bad_channels_dict)\n",
     "\n",
     "# Replace 'your_input_directory' and 'your_output_directory' with the actual paths\n",
     "input_directory = main_folder\n",
@@ -249,10 +249,7 @@
     "bad_channels_result = find_bad_channels(input_directory)\n",
     "\n",
     "# Iterate through ieeg files and convert to EDF\n",
-    "for ieeg_file_name in os.listdir(input_directory):\n",
-    "    if ieeg_file_name.endswith(\".vhdr\"):\n",
-    "        ieeg_file_path = os.path.join(input_directory, ieeg_file_name)\n",
-    "        convert_vhdr_to_edf(ieeg_file_path, output_directory, bad_channels_result)\n"
+    "parse_and_convert_data(input_directory, output_directory, bad_channels_result)\n"
    ]
   }
  ],
