--- a/notebooks/external-validation/metadata_to_excel.ipynb
+++ b/notebooks/external-validation/metadata_to_excel.ipynb
@@ -6,6 +6,7 @@
    "source": [
     "This notebook checks the EDF files from the \"Ext-val-edf\" directory and creates an Excel file with metadata:\n",
     "* SUB_ID\n",
+    "* RUN_ID\n",
     "* RECORDING_LENGHT\n",
     "* SEIZURE_LENGTH\n",
     "* PRESEIZURE_LENGTH\n",
@@ -977,7 +978,6 @@
     "    'SEIZURE_LEN': [],\n",
     "    'PRESEIZURE_LEN': [],\n",
     "    'FS': [],\n",
-    "    'EVENT_CH': [],\n",
     "    'NOTES': []\n",
     "}"
    ]
@@ -1021,11 +1021,10 @@
     "            eeg_seizure = EEG.from_file(edf_file, epoch(ms(step), ms(span)))    # load raw seizure SEEG data as an EEG object (class)\n",
     "\n",
     "            sub_id = file_name.split('_')[0]\n",
-    "            run_id = file_name.split('_')[1]\n",
-    "            event_ch = 1 if \"EVENT\" in list(eeg_seizure.axes.region) else 0\n",
+    "            run_id = file_name.split('_')[1].split(\".\")[0]\n",
     "            recording_len = eeg_seizure.duration\n",
     "            notes = list(eeg_seizure.notes)\n",
-    "            sz_start_note, sz_end_note = 'Stimulus/S  2', 'Stimulus/S  1'\n",
+    "            sz_start_note, sz_end_note = 'Start', 'End'\n",
     "            seizure_len = eeg_seizure.notes[sz_end_note][0].time - eeg_seizure.notes[sz_start_note][0].time\n",
     "            preseizure_len = eeg_seizure.duration.time - seizure_len\n",
     "            fs = eeg_seizure.fs\n",
@@ -1037,7 +1036,6 @@
     "            data['PRESEIZURE_LEN'].append(preseizure_len)\n",
     "            data['FS'].append(fs)\n",
     "            data['NOTES'].append(notes)\n",
-    "            data['EVENT_CH'].append(event_ch)\n",
     "\n",
     "edf_directory = main_folder + 'Ext-val-edf/'\n",
     "\n",
