--- a/notebooks/external-validation/metadata_to_excel.ipynb
+++ b/notebooks/external-validation/metadata_to_excel.ipynb
@@ -11,7 +11,6 @@
     "* SEIZURE_LENGTH\n",
     "* PRESEIZURE_LENGTH\n",
     "* FS (Hz)\n",
-    "* EVENT_CHANNEL (present or not)\n",
     "* NOTES (seizure onset and offset)"
    ]
   },
@@ -968,8 +967,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "\n",
     "# Sample data\n",
     "data = {\n",
     "    'SUB_ID': [],\n",
@@ -980,6 +977,48 @@
     "    'FS': [],\n",
     "    'NOTES': []\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def find_annotations(sub_id, run_id):\n",
+    "    \"\"\"\n",
+    "    Find the seizure onset and offset annotations from the Excel file.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - annotations_path (str): Path to the Excel table.\n",
+    "    - sub_id (str): Subject ID.\n",
+    "    - run_id (str): Run ID.\n",
+    "\n",
+    "    Returns:\n",
+    "    - onset (float): Seizure onset time (s)\n",
+    "    - offset (float): Seizure offset time (s)\n",
+    "    \"\"\"\n",
+    "    onset, offset = None, None\n",
+    "\n",
+    "    # Load the DataFrame from the Excel file\n",
+    "    df = pd.read_excel(\"/content/gdrive/My Drive/Ext-val/onset_annotations.xlsx\")\n",
+    "\n",
+    "    # Discard rows with a value of 1 in the 'UNCLEAR' column\n",
+    "    df = df[df['UNCLEAR'] != 1]\n",
+    "\n",
+    "    # Find the row with the specified SUB_ID and RUN_ID\n",
+    "    selected_row = df[(df['SUB_ID'] == sub_id) & (df['RUN_ID'] == run_id)]\n",
+    "\n",
+    "    # Check if the row is found\n",
+    "    if not selected_row.empty:\n",
+    "        # Extract 'ONSET_TIME' and 'OFFSET_TIME' from the selected row\n",
+    "        onset = selected_row['ONSET_TIME'].values[0]\n",
+    "        offset = selected_row['OFFSET_TIME'].values[0]\n",
+    "\n",
+    "    return onset, offset\n",
+    "    "
    ]
   },
   {
@@ -1016,18 +1055,24 @@
     "\n",
     "            print(f\"Processing {file_name}\")\n",
     "            edf_file = os.path.join(edf_dir, file_name)\n",
+    "            sub_id = file_name.split('_')[0]\n",
+    "            run_id = file_name.split('_')[1].split(\".\")[0]\n",
     "\n",
     "            # Load raw seizure SEEG data as an EEG object\n",
     "            eeg_seizure = EEG.from_file(edf_file, epoch(ms(step), ms(span)))    # load raw seizure SEEG data as an EEG object (class)\n",
     "\n",
-    "            sub_id = file_name.split('_')[0]\n",
-    "            run_id = file_name.split('_')[1].split(\".\")[0]\n",
-    "            recording_len = eeg_seizure.duration\n",
-    "            notes = list(eeg_seizure.notes)\n",
+    "            # Find seizure onset and offset times in the manually created Excel table\n",
+    "            seizure_onset, seizure_offset = find_annotations(sub_id, run_id)\n",
     "            sz_start_note, sz_end_note = 'Start', 'End'\n",
+    "            eeg_seizure.notes['Start'] = secs(seizure_onset)\n",
+    "            eeg_seizure.notes['Start'] = secs(seizure_offset)\n",
+    "\n",
+    "            recording_len = eeg_seizure.duration\n",
+    "            notes = list(eeg_seizure.notes); print(f\"Notes: {notes}\")\n",
+    "\n",
     "            seizure_len = eeg_seizure.notes[sz_end_note][0].time - eeg_seizure.notes[sz_start_note][0].time\n",
     "            preseizure_len = eeg_seizure.duration.time - seizure_len\n",
-    "            fs = eeg_seizure.fs\n",
+    "            fs = eeg_seizure.fs; print(f\"Sampling: {fs} Hz\")\n",
     "\n",
     "            data['SUB_ID'].append(sub_id)\n",
     "            data['RUN_ID'].append(run_id)\n",
