--- a/notebooks/external-validation/brainvision_to_edf.ipynb
+++ b/notebooks/external-validation/brainvision_to_edf.ipynb
@@ -192,12 +192,14 @@
     "    \n",
     "    # Find seizure onset and offset times in the manually created Excel table\n",
     "    seizure_onset, seizure_offset = find_annotations(subject_id, run_number)\n",
-    "    # Remove existing annotations\n",
-    "    raw.set_annotations(None)\n",
-    "    assert len(raw.annotations) == 0\n",
-    "    # Create and set annotations\n",
-    "    annotations = mne.Annotations(onset=[seizure_onset,seizure_offset], duration=[0,0], description=['Start', 'End'])\n",
-    "    raw.set_annotations(annotations)\n",
+    "    if seizure_onset and seizure_offset:\n",
+    "        # Remove existing annotations\n",
+    "        raw.set_annotations(None)\n",
+    "        assert len(raw.annotations) == 0\n",
+    "        # Create and set annotations\n",
+    "        annotations = mne.Annotations(onset=[seizure_onset,seizure_offset], duration=[0,0], description=['Start', 'End'])\n",
+    "        raw.set_annotations(annotations)\n",
+    "        print(mne.events_from_annotations(raw))\n",
     "    # Extract bad channels for the current file\n",
     "    bad_channels = bad_channels_dict.get(f\"{subject_id}_{run_number}\", [])\n",
     "\n",
