--- a/notebooks/external-validation/metadata_to_excel.ipynb
+++ b/notebooks/external-validation/metadata_to_excel.ipynb
@@ -958,7 +958,7 @@
     "from google.colab import drive\n",
     "drive.mount('/content/gdrive')\n",
     "\n",
-    "main_folder = \"/content/gdrive/My Drive/\""
+    "main_folder = \"/content/gdrive/My Drive/Ext-val/\""
    ]
   },
   {
@@ -992,7 +992,6 @@
     "    Find the seizure onset and offset annotations from the Excel file.\n",
     "\n",
     "    Parameters:\n",
-    "    - annotations_path (str): Path to the Excel table.\n",
     "    - sub_id (str): Subject ID.\n",
     "    - run_id (str): Run ID.\n",
     "\n",
@@ -1005,8 +1004,8 @@
     "    # Load the DataFrame from the Excel file\n",
     "    df = pd.read_excel(\"/content/gdrive/My Drive/Ext-val/onset_annotations.xlsx\")\n",
     "\n",
-    "    # Discard rows with a value of 1 in the 'UNCLEAR' column\n",
-    "    df = df[df['UNCLEAR'] != 1]\n",
+    "    # # Discard rows with a value of 1 in the 'UNCLEAR' column\n",
+    "    # df = df[df['UNCLEAR'] != 1] # subjh106 unique run is unclear\n",
     "\n",
     "    # Find the row with the specified SUB_ID and RUN_ID\n",
     "    selected_row = df[(df['SUB_ID'] == sub_id) & (df['RUN_ID'] == run_id)]\n",
@@ -1064,19 +1063,25 @@
     "            # Find seizure onset and offset times in the manually created Excel table\n",
     "            seizure_onset, seizure_offset = find_annotations(sub_id, run_id)\n",
     "            sz_start_note, sz_end_note = 'Start', 'End'\n",
-    "            eeg_seizure.notes['Start'] = secs(seizure_onset)\n",
-    "            eeg_seizure.notes['Start'] = secs(seizure_offset)\n",
+    "            eeg_seizure.notes['Start'] = [secs(seizure_onset)]\n",
+    "            eeg_seizure.notes['End'] = [secs(seizure_offset)]\n",
     "\n",
-    "            recording_len = eeg_seizure.duration\n",
     "            notes = list(eeg_seizure.notes); print(f\"Notes: {notes}\")\n",
     "\n",
+    "            # Load the DataFrame from the Excel file\n",
+    "            df = pd.read_excel(\"/content/gdrive/My Drive/Ext-val/onset_annotations.xlsx\")\n",
+    "            \n",
+    "            eeg_seizure.duration = secs(df.loc[(df['SUB_ID'] == sub_id) & (df['RUN_ID'] == run_id), 'DURATION'].values)\n",
+    "            recording_len = eeg_seizure.duration.time\n",
+    "\n",
     "            seizure_len = eeg_seizure.notes[sz_end_note][0].time - eeg_seizure.notes[sz_start_note][0].time\n",
-    "            preseizure_len = eeg_seizure.duration.time - seizure_len\n",
+    "            preseizure_len = eeg_seizure.notes[sz_start_note][0].time\n",
+    "            print(f\"Preseizure length = {preseizure_len}\")\n",
     "            fs = eeg_seizure.fs; print(f\"Sampling: {fs} Hz\")\n",
     "\n",
     "            data['SUB_ID'].append(sub_id)\n",
     "            data['RUN_ID'].append(run_id)\n",
-    "            data['RECORDING_LEN'].append(recording_len)\n",
+    "            data['RECORDING_LEN'].append(recording_len[0])\n",
     "            data['SEIZURE_LEN'].append(seizure_len)\n",
     "            data['PRESEIZURE_LEN'].append(preseizure_len)\n",
     "            data['FS'].append(fs)\n",
@@ -1086,6 +1091,15 @@
     "\n",
     "# Call the parsing function\n",
     "parse_ext_val_edf_directory(edf_directory)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.DataFrame(data).to_excel(main_folder + \"metadata.xlsx\")"
    ]
   }
  ],
